CloudFormation/SHERLOCK.template
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Resources": {
    "vpc237cdd5a": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "172.31.0.0/16",
        "InstanceTenancy": "default",
        "EnableDnsSupport": "true",
        "EnableDnsHostnames": "true"
      }
    },
    "subnet0c5bc144": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "172.31.16.0/20",
        "AvailabilityZone": "us-east-1d",
        "VpcId": {
          "Ref": "vpc237cdd5a"
        }
      }
    },
    "igw04da4e1f52dca0a04": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
      }
    },
    "doptcc3b84aa": {
      "Type": "AWS::EC2::DHCPOptions",
      "Properties": {
        "DomainName": "ec2.internal",
        "DomainNameServers": [
          "AmazonProvidedDNS"
        ]
      }
    },
    "instancei033ddab09a02f836a": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "false",
        "InstanceInitiatedShutdownBehavior": "stop",
        "EbsOptimized": "true",
        "ImageId": "ami-08531832555a14fe2",
        "InstanceType": "m4.large",
        "KeyName": "SHERLOCK",
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": "AnsibleServer"
          }
        ],
        "NetworkInterfaces": [
          {
            "DeleteOnTermination": "true",
            "DeviceIndex": 0,
            "SubnetId": {
              "Ref": "subnet0c5bc144"
            },
            "PrivateIpAddresses": [
              {
                "PrivateIpAddress": "172.31.29.51",
                "Primary": "true"
              }
            ],
            "GroupSet": [
              {
                "Ref": "sgAnsibleServer"
              }
            ],
            "AssociatePublicIpAddress": "true"
          }
        ]
      }
    },
    "instancei0ef41deb699359c6a": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "false",
        "InstanceInitiatedShutdownBehavior": "stop",
        "EbsOptimized": "true",
        "ImageId": "ami-08531832555a14fe2",
        "InstanceType": "m4.large",
        "KeyName": "SHERLOCK",
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": "SHERLOCK"
          }
        ],
        "NetworkInterfaces": [
          {
            "DeleteOnTermination": "true",
            "Description": "Primary network interface",
            "DeviceIndex": 0,
            "SubnetId": {
              "Ref": "subnet0c5bc144"
            },
            "PrivateIpAddresses": [
              {
                "PrivateIpAddress": "172.31.18.8",
                "Primary": "true"
              }
            ],
            "GroupSet": [
              {
                "Ref": "sgAnsibleServer"
              }
            ],
            "AssociatePublicIpAddress": "true"
          }
        ]
      }
    },
    "instancei0a3661a279ed6fe31": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "false",
        "InstanceInitiatedShutdownBehavior": "stop",
        "EbsOptimized": "true",
        "ImageId": "ami-08531832555a14fe2",
        "InstanceType": "m4.large",
        "KeyName": "SHERLOCK",
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": "DockerServer"
          }
        ],
        "NetworkInterfaces": [
          {
            "DeleteOnTermination": "true",
            "Description": "Primary network interface",
            "DeviceIndex": 0,
            "SubnetId": {
              "Ref": "subnet0c5bc144"
            },
            "PrivateIpAddresses": [
              {
                "PrivateIpAddress": "172.31.28.161",
                "Primary": "true"
              }
            ],
            "GroupSet": [
              {
                "Ref": "sgAnsibleServer"
              }
            ],
            "AssociatePublicIpAddress": "true"
          }
        ]
      }
    },
    "sgAnsibleServer": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "SSH for Ansible",
        "VpcId": {
          "Ref": "vpc237cdd5a"
        }
      }
    },
    "gw1": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "vpc237cdd5a"
        },
        "InternetGatewayId": {
          "Ref": "igw04da4e1f52dca0a04"
        }
      }
    },
    "dchpassoc1": {
      "Type": "AWS::EC2::VPCDHCPOptionsAssociation",
      "Properties": {
        "VpcId": {
          "Ref": "vpc237cdd5a"
        },
        "DhcpOptionsId": {
          "Ref": "doptcc3b84aa"
        }
      }
    },
    "ingress1": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgAnsibleServer"
        },
        "IpProtocol": "tcp",
        "FromPort": "22",
        "ToPort": "22",
        "CidrIp": "73.167.116.64/32"
      }
    },
    "ingress2": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgAnsibleServer"
        },
        "IpProtocol": "tcp",
        "FromPort": "22",
        "ToPort": "22",
        "CidrIp": "172.31.0.0/16"
      }
    },
    "egress1": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "sgAnsibleServer"
        },
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    }
  },
  "Description": ""
}
